# lab08

./: Dockerfile
.github/workflows/: build.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake
_build/solver_application/: Makefile  cmake_install.cmake
_build/solver_lib/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: hello_world.cpp
solver_application/: equation.cpp
solver_lib/: CMakeLists.txt
